--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,10 @@
-#students{
+/*agregando estilos a la section students*/
+.students{
   box-sizing: content-box;
-  padding: 0;
+  padding:0 ;
   margin: 0;
   width: 100%;
+  height: 100%;
   font-family: 'Roboto', sans-serif;
 }
 .colum-left,.colum-right,.colum-1,.colum-2{
@@ -10,65 +12,108 @@
   margin: 7px;
 }
 .colum-left{
-  float: left;
-  width:23%;
+  position: absolute;
+  left: 0;
+  width:40%;
+  height: 100%;
   padding: 7px;
-  background: gray;
+  
+}
+.specialization{
+  position: absolute;
+  right: 0;
+  padding: 15px;
+  width: 450px;
   border-radius: 5px;
+  background: #f7f7f7;
+  border-bottom: 1px solid gray; 
+  border-right:  1px solid gray;
+}
+.specialization ul,.colum-1 ul{
+  padding: 0;
+}
+.specialization ul li{
+  list-style: none;
+}
+.icon-square-o{
+  margin-right: 10px;
+  color: #ffc107;
+}
+.icon-square-o:hover{
+  background: #ffc107;
 }
 .colum-right{
-  width: 60%;
+  position:absolute;
+  right: 0;
+  width:55%;
+  height: 100%;
 }
 .search{
-  background: gray;
-  width: 700px;
-  height: 30px;
-  margin-bottom: 10px;
+  position: absolute;
+  left: 0;
+  width: 820px;
+  height: 40px;
+  top: 0;
   border-radius: 5px;
+  background: #f7f7f7;
+  border-bottom: 1px solid gray; 
+  border-right:  1px solid gray;
 }
 input{
-  background: gray;
+  display:inline-block;
   border: none;
   outline: none;
-  border-radius:
-  width: 680px;
+  width: 670px;
+  background: #f7f7f7;  
 }
 .icon-search{
   display: inline-block;
-  margin: 5px;
+  margin: 10px;
 }
 .students-skills{
-  width: 700px;
-  background: gray;
+  position:absolute;
+  left: 0;
+  top:60px;
+  padding: 10px;
+  width: 800px;
+  height: 190px;
   border-radius: 5px;
+  background: #f7f7f7;
+  border-bottom: 1px solid gray; 
+  border-right:  1px solid gray;
 }
-figure{
-  display: inline-block;
+.figure{
   margin: 5px;
   float: left;
 }
-img{
-  width: 100px;
-  height: 100px;
+.figure .image{
+  width: 160px;
+  height: 180px;
 }
-.colum-1 ul{
- padding: 0;
+.colum-1{
+  font-size: 20px;
 }
+.colum-1 h1,.colum-1 p,.box h1,.box p{
+  margin: 0;
+}
+
 .colum-1 ul li{
   padding: 2px;
   display: inline-block;
   list-style: none;
   font-size: 10px;
   margin-right: 20px;
-  background: white;
-
+  background: white;  
 }
 .colum-2{
   float: right;
   margin:10px;
+  font-size: 10px;
 }
 .box{
   display: inline-block;
-  padding: 5px;
-  background: white;
+  padding: 8px;
+  margin-right: 5px;
+  background:white;
 }
+
