--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/*agregando estilos a la section students*/
+/*agregando estilos a la seccion students*/
 .students{
   box-sizing: content-box;
   padding:0 ;
@@ -17,7 +17,6 @@
   width:40%;
   height: 100%;
   padding: 7px;
-  
 }
 .specialization{
   position: absolute;
@@ -26,7 +25,7 @@
   width: 450px;
   border-radius: 5px;
   background: #f7f7f7;
-  border-bottom: 1px solid gray; 
+  border-bottom: 1px solid gray;
   border-right:  1px solid gray;
 }
 .specialization ul,.colum-1 ul{
@@ -56,7 +55,7 @@
   top: 0;
   border-radius: 5px;
   background: #f7f7f7;
-  border-bottom: 1px solid gray; 
+  border-bottom: 1px solid gray;
   border-right:  1px solid gray;
 }
 input{
@@ -64,7 +63,7 @@ input{
   border: none;
   outline: none;
   width: 670px;
-  background: #f7f7f7;  
+  background: #f7f7f7;
 }
 .icon-search{
   display: inline-block;
@@ -79,7 +78,7 @@ input{
   height: 190px;
   border-radius: 5px;
   background: #f7f7f7;
-  border-bottom: 1px solid gray; 
+  border-bottom: 1px solid gray;
   border-right:  1px solid gray;
 }
 .figure{
@@ -96,14 +95,13 @@ input{
 .colum-1 h1,.colum-1 p,.box h1,.box p{
   margin: 0;
 }
-
 .colum-1 ul li{
   padding: 2px;
   display: inline-block;
   list-style: none;
   font-size: 10px;
   margin-right: 20px;
-  background: white;  
+  background: white;
 }
 .colum-2{
   float: right;
@@ -116,4 +114,3 @@ input{
   margin-right: 5px;
   background:white;
 }
-
