--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,66 @@
+* {
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
+}
+.capital-letter {
+  text-transform: uppercase;
+}
+header {
+  text-align: center;
+  font-size:36px;
+}
+.logo {
+  width: 300px;
+  text-align: center;
+  display: inline-block;
+}
+.icons-header {
+  display: inline-block ;
+  position: absolute;
+  right:0px;
+  margin: 20px;
+}
+.icons-header i {
+  padding: 0 5px;
+  color: rgba(0, 0, 0, 0.54)
+}
+.section-1{
+  height: 150px;
+  background: #e1e1e1;
+  padding-left: 175px;
+  padding-top: 20px;
+}
+.section-1 h3 {
+  font-size: 30px;
+  font-weight: 900;
+  display: inline-block;
+  color: #2a2440;
+}
+.section-1 span a {
+  display: inline-block;
+  padding: 0 12px;
+  position: relative;
+  top: 7px;
+  color: #2a2440;
+}
+.section-1 div {
+  padding-top: 40px;
+}
+.section-1 h5{
+  display: inline-block;
+  margin-right:20px;
+  color: #2a2440;
+  font-size: 20px;
+  font-weight: 900;
+}
+.section-1 h5 a {
+  text-decoration: none;
+  color: #2a2440;
+}
+.section-1 h5:first-child {
+  border-bottom: 5px solid #ffc107;
+}
 /*agregando estilos a la seccion students*/
 .students{
   box-sizing: content-box;
@@ -70,7 +133,7 @@ input{
   margin: 10px;
 }
 .students-skills{
-  position:absolute;
+  position:relative;
   left: 0;
   top:60px;
   padding: 10px;
