--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,7 @@
   height: 100%;
   font-family: 'Roboto', sans-serif;
 }
-.colum-left,.colum-right,.colum-1,.colum-2{
+.colum-left,.colum-right,.colum-1,.colum-2,.container-skills{
   display: inline-block;
   margin: 7px;
 }
@@ -72,7 +72,7 @@
   border-bottom: 1px solid gray;
   border-right:  1px solid gray;
 }
-.specialization ul,.colum-1 ul{
+.specialization ul{
   padding: 0;
 }
 .specialization ul li{
@@ -90,6 +90,7 @@
   right: 0;
   width:55%;
   height: 100%;
+  text-transform: uppercase;
 }
 .search{
   position: absolute;
@@ -117,6 +118,7 @@ input{
   position:relative;
   left: 0;
   top:60px;
+  margin-bottom: 20px;
   padding: 10px;
   width: 800px;
   height: 190px;
@@ -128,18 +130,23 @@ input{
 .figure{
   margin: 5px;
   float: left;
+  background: red;
+}
+.background-image-peru{
+  background-image: url(../assets/img/peru.png);
 }
 .figure .image{
-  width: 160px;
-  height: 160px;
+  width: 100px;
+  height: 100px;
 }
+
 .colum-1{
   font-size: 20px;
 }
 .colum-1 h1,.colum-1 p,.box h1,.box p{
   margin: 0;
 }
-.colum-1 ul li{
+.colum-1 .container-skills p{
   padding: 2px;
   display: inline-block;
   list-style: none;
